fix crash involving TileScalingTextureMapper

Using the GeoPainter here directly rather than using a temporary QPainter on the GeoPainter's device seems to prevent the crash.

BUG: 273474